Add Activity list

--- a/deployd/resources/users/config.json
+++ b/deployd/resources/users/config.json
@@ -8,6 +8,14 @@
 			"required": false,
 			"id": "eventId",
 			"order": 0
+		},
+		"role": {
+			"name": "role",
+			"type": "string",
+			"typeLabel": "string",
+			"required": false,
+			"id": "role",
+			"order": 1
 		}
 	}
 }
