--- a/deployd/resources/users/config.json
+++ b/deployd/resources/users/config.json
@@ -16,6 +16,14 @@
 			"required": false,
 			"id": "role",
 			"order": 1
+		},
+		"photo": {
+			"name": "photo",
+			"type": "string",
+			"typeLabel": "string",
+			"required": false,
+			"id": "photo",
+			"order": 2
 		}
 	}
 }
