--- a/deployd/resources/answers/config.json
+++ b/deployd/resources/answers/config.json
@@ -33,20 +33,20 @@
 			"id": "questionId",
 			"order": 3
 		},
-		"answer": {
-			"name": "answer",
-			"type": "string",
-			"typeLabel": "string",
-			"required": false,
-			"id": "answer",
-			"order": 4
-		},
 		"comment": {
 			"name": "comment",
 			"type": "string",
 			"typeLabel": "string",
 			"required": false,
 			"id": "comment",
+			"order": 4
+		},
+		"answer": {
+			"name": "answer",
+			"type": "number",
+			"typeLabel": "number",
+			"required": false,
+			"id": "answer",
 			"order": 5
 		}
 	}
