plugins work fixed

--- a/platforms/wp8/Atea_Community_2014.csproj
+++ b/platforms/wp8/Atea_Community_2014.csproj
@@ -634,6 +634,7 @@
     <ItemGroup>
         <Content Include="www/template/schedules.html" />
     </ItemGroup>
+    <ItemGroup />
     <ItemGroup>
         <Compile Include="Plugins\com.phonegap.plugins.barcodescanner\BarcodeScanner.cs" />
     </ItemGroup>
