--- a/platforms/wp8/Atea_Community_2014.csproj
+++ b/platforms/wp8/Atea_Community_2014.csproj
@@ -206,9 +206,6 @@
         </PostBuildEvent>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Include="Plugins\org.apache.cordova.inappbrowser\InAppBrowser.cs" />
-    </ItemGroup>
-    <ItemGroup>
         <Reference Include="zxing.wp8.0, Version=0.14.0.0, Culture=neutral, processorArchitecture=MSIL">
             <SpecificVersion>False</SpecificVersion>
             <HintPath>packages\ZXing.Net.0.14.0.1\lib\wp8\zxing.wp8.0.dll</HintPath>
@@ -217,6 +214,10 @@
     <Import Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" Project="$(SolutionDir)\.nuget\NuGet.targets" />
     <ItemGroup />
     <ItemGroup />
+    <ItemGroup />
+    <ItemGroup>
+        <Compile Include="Plugins\org.apache.cordova.inappbrowser\InAppBrowser.cs" />
+    </ItemGroup>
     <ItemGroup>
         <Content Include="Plugins\org.bloxlab.barcodescanner\zxing.wp8.0.dll" />
     </ItemGroup>
@@ -233,61 +234,22 @@
         </Compile>
     </ItemGroup>
     <ItemGroup>
-        <Content Include="www\config\main.coffee" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\config\main.js" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\config\npm-debug.log" />
-    </ItemGroup>
-    <ItemGroup>
         <Content Include="www\cordova.js" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\cordova_plugins.js" />
     </ItemGroup>
     <ItemGroup>
-        <Content Include="www\core\config\main.js" />
+        <Content Include="www\css\.DS_Store" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\css\bootstrap.min.css" />
     </ItemGroup>
     <ItemGroup>
+        <Content Include="www\css\images\.DS_Store" />
+    </ItemGroup>
+    <ItemGroup>
         <Content Include="www\css\images\36-1.gif" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\css\images\ajax-loader.gif" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\css\images\ajax_loader_green_128.gif" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\css\images\ajax_loader_green_64.gif" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\css\images\animated_loading.gif" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\css\images\loadear.gif" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\css\images\loader.gif" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\css\images\loading.gif" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\css\images\loading2.gif" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\css\images\loading_black.gif" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\css\images\spiffygif_86x86.gif" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\css\images\Thumbs.db" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\css\index.css" />
@@ -347,22 +309,7 @@
         <Content Include="www\css\variables.css" />
     </ItemGroup>
     <ItemGroup>
-        <Content Include="www\fonts\Flat-UI-Icons-24.ttf" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\fonts\Flat-UI-Icons-24.woff" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\fonts\glyphicons-halflings-regular.eot" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\fonts\glyphicons-halflings-regular.svg" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\fonts\glyphicons-halflings-regular.ttf" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\fonts\glyphicons-halflings-regular.woff" />
+        <Content Include="www\fonts\.DS_Store" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\fonts\lato-black.ttf" />
@@ -432,6 +379,9 @@
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\img\coins.jpg" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="www\img\contacts-xxl.png" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\img\edit-property-xl.png" />
@@ -521,6 +471,9 @@
         <Content Include="www\img\photo.jpg" />
     </ItemGroup>
     <ItemGroup>
+        <Content Include="www\img\raphael_location_simple-black_1.png" />
+    </ItemGroup>
+    <ItemGroup>
         <Content Include="www\img\Sad-active.png" />
     </ItemGroup>
     <ItemGroup>
@@ -549,6 +502,9 @@
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\js\.DS_Store" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="www\js\angularlib\.DS_Store" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\js\angularlib\angular-animate.min.js" />
@@ -605,34 +561,37 @@
         <Content Include="www\js\externallb\fastclick.min.js" />
     </ItemGroup>
     <ItemGroup>
-        <Content Include="www\js\externallb\hammer.js" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="www\js\externallb\hammer.min.js" />
-    </ItemGroup>
-    <ItemGroup>
         <Content Include="www\js\externallb\qrcode.js" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\js\factory.js" />
     </ItemGroup>
     <ItemGroup>
-        <Content Include="www\js\i18n\en.json" />
+        <Content Include="www\js\i18n\.DS_Store" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="www\js\i18n\en.js" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="www\js\i18n\no.js" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\js\i18n\polyglot.min.js" />
     </ItemGroup>
     <ItemGroup>
-        <Content Include="www\js\i18n\ru.json" />
+        <Content Include="www\main_en.html" />
     </ItemGroup>
     <ItemGroup>
-        <Content Include="www\main.html" />
+        <Content Include="www\main_no.html" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\plugins\org.apache.cordova.inappbrowser\www\inappbrowser.js" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\plugins\org.bloxlab.barcodescanner\www\barcodescanner.js" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="www\template\.DS_Store" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\template\comment.html" />
