add analythic cordova plugin

--- a/platforms/wp8/Atea_Community_2014.csproj
+++ b/platforms/wp8/Atea_Community_2014.csproj
@@ -619,4 +619,16 @@
     <ItemGroup>
         <Content Include="www/template/schedules.html" />
     </ItemGroup>
+    <ItemGroup>
+        <Content Include="www\plugins\org.apache.cordova.inappbrowser\www\inappbrowser.js" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="www\plugins\com.phonegap.plugins.barcodescanner\www\barcodescanner.js" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="www\plugins\com.danielcwilson.plugins.googleanalytics\www\analytics.js" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="www\cordova_plugins.js" />
+    </ItemGroup>
 </Project>
